--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <div class="w3-dropdown-hover">
             <button class="w3-padding-large w3-button" title="More" aria-haspopup="true" aria-expanded="false">Assignment 1 <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4" role="menu">
-                <a href="Factorial.html" class="w3-bar-item w3-button" role="menuitem">Celsius to Fahrenheit</a>
-                <a href="FahToCel.html" class="w3-bar-item w3-button" role="menuitem">Fahrenheit to Celsius</a>
-                <a href="MeTFe.html" class="w3-bar-item w3-button" role="menuitem">Meters to Feet</a>
-                <a href="FeTMe.html" class="w3-bar-item w3-button" role="menuitem">Feet to Meters</a>
+                <a href="Factorial.html" class="w3-bar-item w3-button" role="menuitem">Factorial</a>
+                <a href="Conversion.html" class="w3-bar-item w3-button" role="menuitem">Conversion</a>
+                <a href="IncomeTaxCalculator.html" class="w3-bar-item w3-button" role="menuitem">Tax</a>
+                <a href="SimplePayroll.html" class="w3-bar-item w3-button" role="menuitem">Payroll</a>
             </div>
         </div>
 
