--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2023 Your Name. All rights reserved.</p>
+    <p>&copy; Stephen Jhon D. Jimena</p>
 </footer>
 
 </body>
