--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </header>
 
 <div class="w3-dropdown-hover">
-    <button class="w3-padding-large w3-button" title="More" aria-haspopup="true" aria-expanded="false">Assignment 1 <i class="fa fa-caret-down"></i></button>
+    <button class="w3-padding-large w3-button" title="More" aria-haspopup="true" aria-expanded="false">Assignment 1-4 <i class="fa fa-caret-down"></i></button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4" role="menu">
         <a href="Factorial.html" class="w3-bar-item w3-button" role="menuitem">Factorial</a>
         <a href="Conversion.html" class="w3-bar-item w3-button" role="menuitem">Conversion</a>
